--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <div class="tophair left"></div>
         <div class="tophair middle"></div>
         <div class="tophair right"></div>
-        <div class="bread-jaw"></div>
-        <div class="bread-chin"></div>
+        <div class="beard-jaw"></div>
+        <div class="beard-chin"></div>
       </div>
       <div class="face">
         <div class="foundation"></div>
